# facebook-video-downloader

./: .gitignore  Cargo.toml  PROGRESS.md  README.md  Trunk.toml  build-release.sh  debug_urls  deny.toml  index.html  package.json  pnpm-lock.yaml  start-dev.sh  tailwind.config.js  test_failing_urls
.cargo/: config.toml
.github/workflows/: ci.yml  pr-automation.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs
crates/cli/src/commands/: anti_blocking.rs  anti_blocking.rs.backup  extraction.rs  mod.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/batch/: mod.rs  processor.rs
crates/core/src/common/: config.rs  error.rs  mod.rs  types.rs  utils.rs
crates/core/src/extraction/: extractor.rs  metadata.rs  mod.rs  streams.rs
crates/core/src/network/: anti_blocking.rs  download.rs  mod.rs  real_ipv6.rs
crates/core/src/processing/: compression.rs  file_size.rs  mod.rs  thumbnail.rs
crates/core/src/tests/: duration_extraction_tests.rs  mod.rs
crates/core/tests/: anti_blocking_tests.rs
crates/ui/: Cargo.toml
crates/ui/src/: app.rs  lib.rs  main.rs
crates/ui/src/components/: batch_queue.rs  compression.rs  copy_button.rs  header.rs  icons.rs  mod.rs  notification.rs  privacy_indicator.rs  sidebar.rs  theme_toggle.rs  thumbnail.rs
crates/ui/src/hooks/: mod.rs
crates/ui/src/pages/: about.rs  home.rs  mod.rs  settings.rs
crates/ui/src/services/: mod.rs  notification.rs  state.rs  tauri_api.rs  theme.rs
crates/ui/src/utils/: formatting.rs
docs/: BATCH_PROCESSING_IMPROVEMENTS.md  BATCH_UI_REDESIGN.md  BATCH_UI_TESTING.md  FACEBOOK_EXTRACTION_TEST_SUITE.md  FACEBOOK_TEST_DEVELOPER_GUIDE.md  FACEBOOK_TEST_QUICK_REFERENCE.md  FACEBOOK_URL_EXTRACTION_DEBUG_REPORT.md  FILE_SIZE_ACCURACY_IMPROVEMENT.md  INSTALLATION.md  README.md  REAL_IPV6_IMPLEMENTATION.md  REAL_IPV6_IMPLEMENTATION_SUMMARY.md  SIMULATION_MODE_REMOVAL_SUMMARY.md  THUMBNAIL_DISPLAY_FIX_DOCUMENTATION.md
docs/completed/: BATCH_DIAGNOSTIC_REPORT.md  PROGRESS.md  README.md  test_compression_fix.md
docs/debugging/: THUMBNAIL_DEBUGGING_GUIDE.md
docs/development/: DOCUMENTATION_REORGANIZATION_SUMMARY.md  HOT_RELOAD_SETUP.md  PROJECT_REORGANIZATION_SUMMARY.md  REFACTORING_SUMMARY.md
docs/features/: DURATION_EXTRACTION_TEST_SUMMARY.md  DURATION_INTEGRATION_SUMMARY.md
docs/testing/: COMPREHENSIVE_THUMBNAIL_TESTING_README.md  TEST_ORGANIZATION_SUMMARY.md
scripts/: README.md  build.sh  dev-concurrent.sh  dev-watch.sh  fast-build.sh  run_tests.sh  setup-dev.sh  watch-frontend.sh  watch-wasm.sh
src/: app.rs  lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/commands/: anti_blocking.rs  extraction.rs
src/components/: compression.rs  copy_button.rs  header.rs  icons.rs  mod.rs  modal.rs  notification.rs  privacy_indicator.rs  sidebar.rs  theme_toggle.rs  thumbnail.rs
src/hooks/: mod.rs  use_local_storage.rs
src/pages/: about.rs  batch.rs  downloads.rs  home.rs  mod.rs  settings.rs
src/services/: mod.rs  state.rs  tauri_api.rs  theme.rs
src/styles/: main.css
src/utils/: mod.rs  validation.rs
tests/: README.md  ipv6_integration_test.rs
tests/core/: analyze_current_patterns.rs  analyze_facebook_html.rs  comprehensive_pattern_test.rs  test_no_compression.rs
tests/debug/: debug_app_failures.rs  debug_facebook_parsing.rs  debug_metadata_patterns.rs  debug_response_format.rs  debug_specific_failing_urls.rs  debug_thumbnail_cli.rs  debug_title_author_extraction.rs  download_thumbnails_for_review.rs  test_tauri_extraction.rs  test_url_validation.rs
tests/extraction/: README.md  auth_and_error_test.rs  comprehensive_extraction_test.rs  core_extraction_test.rs
tests/extraction/common/: mod.rs
tests/integration/: test_accurate_file_size_integration.rs  test_auth_bypass.rs  test_duration_integration.rs  test_extract_button.rs  test_file_size_comparison.rs  test_real_duration_extraction.rs
tests/thumbnail/: test_all_thumbnail_cases.rs  test_cli_thumbnail_extraction.rs  test_comprehensive_thumbnail_strategies.rs  test_thumbnail_debug.rs  test_thumbnail_download.rs  test_thumbnail_fallback_fix.rs  test_thumbnail_fix_verification.rs  test_thumbnail_with_headers.rs
tests/unit/: DURATION_EXTRACTION_TEST_README.md  test_accurate_file_size.rs  test_duration_extraction.rs  test_enhanced_thumbnail_extraction.rs  test_facebook_reels_metadata.rs  test_facebook_url.rs  test_new_url_format.rs  test_specific_url.rs  test_title_parsing.rs  test_url_validation.rs
tests_new/: README.md
