[package]
name = "facebook-video-downloader-ui"
version = "0.1.0"
edition = "2021"
description = "Web UI components for Facebook video downloader"

[lib]
crate-type = ["cdylib"]

[dependencies]
facebook-video-downloader-core = { path = "../core" }
leptos = { version = "0.8.2", features = ["csr", "nightly"] }
leptos_router = "0.8.2"
wasm-bindgen = "0.2.95"
web-sys = { version = "0.3", features = ["HtmlSelectElement"] }
js-sys = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen-futures = "0.4.45"
gloo = "0.11"
gloo-net = "0.6"
console_error_panic_hook = "0.1"
console_log = "0.2"
log = "0.4"
uuid = { workspace = true }
serde-wasm-bindgen = "0.6"
gloo-events = "0.2.0"
gloo-utils = "0.2.0"
